[package]
name = "tmdx4-workplace"
version = "0.1.0"
edition = "2024"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.axum]
version = "0.8"
features = []

[dependencies.pulldown-cmark]
version = "0.13"
features = ["html"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.hashbrown]
version = "0.15"
features = ["serde"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
ouroboros = "0.18"
argon2 = "0.5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
serde_bytes = "0.11"
serde_with = "3"
serde_json = "1"
rmp-serde = "1"